# rhizo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  ORIGIN_STORY.md  PHASE5_PLAN.md  PHASE6_PLAN.md  README.md  ROADMAP.md  VISION.md  comparison_results.json  pyrightconfig.json  udr_roadmap.md  unified_data_runtime_whitepaper.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
benchmarks/: BASELINE_RESULTS.json  COMPREHENSIVE_BENCHMARK_RESULTS.json  COMPREHENSIVE_COMPETITIVE_RESULTS.json  DISTRIBUTED_BENCHMARK_RESULTS.json  ENERGY_BENCHMARK_RESULTS.json  FINAL_BENCHMARK_RESULTS.json  INDUSTRY_BENCHMARK_RESULTS.json  README.md  baseline_benchmark.py  benchmark_suite.py  comparison_benchmark.py  competitive_benchmark.py  comprehensive_benchmark.py  comprehensive_competitive_benchmark.py  distributed_benchmark.py  energy_benchmark.py  final_comprehensive_benchmark.py  full_competition_benchmark.py  industry_benchmark.py  merkle_benchmark.py  olap_benchmark.py  parallel_encoding_benchmark.py  real_consensus_benchmark.py  row_group_pruning_benchmark.py  test_parallel_encoding.py  test_row_group_pruning.py  unique_features_benchmark.py
docs/: DATAFUSION_INTEGRATION_ROADMAP.md  MERKLE_STORAGE_PLAN.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION_ROADMAP.md  READ_OPTIMIZATION_RESEARCH.md  TECHNICAL_FOUNDATIONS.md
docs/diagrams/: README.md
docs/diagrams/src/: architecture.tex
examples/: benchmark_results.json  benchmark_suite.py  changelog_demo.py  comparison_benchmark.py  corruption_proof_demo.py  cross_table_transaction_demo.py  full_competition_benchmark.py  merkle_benchmark.py  time_travel_demo.py  unified_platform_demo.py  zero_copy_branching_demo.py
papers/: README.md  acid_without_consensus_paper.md  cross_table_acid_paper.md  poac_paper.md  time_energy_theory_paper.md
python/: README.md  _rhizo.pyi  armillaria.pyi  pyproject.toml  udr.pyi
python/armillaria_query/: __init__.py  cache.py  engine.py  olap_engine.py  reader.py  writer.py
python/rhizo/: __init__.py  database.py  engine.py  exceptions.py  logging.py  metrics.py  olap_engine.py  reader.py  subscriber.py  transaction.py  writer.py
python/udr_query/: __init__.py  engine.py  reader.py  subscriber.py  transaction.py  writer.py
rhizo_core/: Cargo.toml
rhizo_core/src/: lib.rs
rhizo_core/src/chunk_store/: mod.rs  store.rs
rhizo_core/src/distributed/: mod.rs  vector_clock.rs
rhizo_core/src/parquet/: decoder.rs  error.rs
rhizo_python/: Cargo.toml  pyproject.toml
rhizo_python/src/: lib.rs
sandbox/: README.md
sandbox/convergence_theory/: FINDING_01.md  THEOREM_constant_convergence.md  experiment_01_baseline.py
sandbox/coordination_bounds/: DISCOVERY_SUMMARY.md  IMPLICATIONS_AND_QUESTIONS.md  OPEN_QUESTIONS.md  PHASE_100_IMPLICATIONS.md  PHASE_101_IMPLICATIONS.md  PHASE_103_IMPLICATIONS.md  PHASE_107_IMPLICATIONS.md  PHASE_108_IMPLICATIONS.md  PHASE_110_IMPLICATIONS.md  PHASE_111_IMPLICATIONS.md  PHASE_112_IMPLICATIONS.md  PHASE_116_IMPLICATIONS.md  PHASE_117_IMPLICATIONS.md  PHASE_119_IMPLICATIONS.md  PHASE_120_IMPLICATIONS.md  PHASE_121_IMPLICATIONS.md  PHASE_122_IMPLICATIONS.md  PHASE_125_IMPLICATIONS.md  PHASE_127_IMPLICATIONS.md  PHASE_129_IMPLICATIONS.md  PHASE_130_IMPLICATIONS.md  PHASE_131_IMPLICATIONS.md  PHASE_132_IMPLICATIONS.md  PHASE_133_IMPLICATIONS.md  PHASE_135_IMPLICATIONS.md  PHASE_136_IMPLICATIONS.md  PHASE_138_IMPLICATIONS.md  PHASE_139_IMPLICATIONS.md  PHASE_140_IMPLICATIONS.md  PHASE_141_IMPLICATIONS.md  PHASE_143_IMPLICATIONS.md  PHASE_145_IMPLICATIONS.md  PHASE_149_IMPLICATIONS.md  PHASE_152_IMPLICATIONS.md  PHASE_153_IMPLICATIONS.md  PHASE_155_IMPLICATIONS.md  PHASE_157_IMPLICATIONS.md  PHASE_20_IMPLICATIONS.md  PHASE_21_IMPLICATIONS.md  PHASE_25_IMPLICATIONS.md  (+207 more)
sandbox/coordination_free/: DESIGN.md  ROADMAP.md  paper_draft.md
sandbox/coordination_free/proofs/: causality_proof.md  convergence_proof.md  edge_cases.md  energy_efficiency_proof.md
sandbox/energy_theory/: FINDING_01.md  FINDING_02.md  THEOREM_waiting_waste.md  experiment_01_landauer.py  experiment_02_waiting_waste.py
sandbox/future_research/: IDEAS.md
sandbox/poac/: algebraic_design.md
tests/: conftest.py  test_armillaria.py  test_branch_query_integration.py  test_branching.py  test_changelog.py  test_changelog_sql.py  test_distributed.py  test_olap_engine.py  test_query_layer.py  test_queryengine_olap.py  test_rhizo.py  test_security.py  test_time_travel_sql.py  test_transactions.py
udr_core/: Cargo.toml
udr_core/src/: lib.rs
udr_core/src/branch/: branch.rs  error.rs  manager.rs  mod.rs
udr_core/src/chunk_store/: store.rs
udr_core/src/merkle/: error.rs  mod.rs  tree.rs  types.rs
udr_core/src/parquet/: decoder.rs  encoder.rs  error.rs  filter.rs  mod.rs
udr_python/: pyproject.toml
udr_python/src/: lib.rs
