[workspace]
members = ["udr_core", "udr_python"]
resolver = "2"

[workspace.dependencies]
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
bytes = "1.5"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.10"
rayon = "1.10"