[workspace]
members = ["rhizo_core", "rhizo_python"]
resolver = "2"

[workspace.dependencies]
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
bytes = "1.5"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.10"
rayon = "1.10"
memmap2 = "0.9"

# Phase 4: Native Arrow/Parquet
arrow = { version = "57", default-features = false, features = ["ipc"] }
parquet = { version = "57", default-features = false, features = ["arrow", "zstd", "snap"] }
tracing = "0.1"