[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udr-query"
version = "0.1.0"
description = "Query layer for Unified Data Runtime"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "maturin>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
