[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rhizo"
version = "0.5.3"
description = "Data, connected. Versioned data with SQL, time travel, and cross-table ACID transactions."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["data", "sql", "duckdb", "arrow", "versioning", "time-travel", "transactions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "rhizo-core>=0.5.3",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://rhizodata.dev"
Repository = "https://github.com/rhizodata/rhizo"

[project.scripts]
rhizo = "rhizo.cli:main"

[project.optional-dependencies]
fast = [
    "datafusion>=35.0.0",
]
dev = [
    "pytest>=7.0.0",
    "maturin>=1.0.0",
    "ruff>=0.1.0",
    "datafusion>=35.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rhizo*"]
