[package]
name = "rhizo_core"
version = "0.5.3"
edition = "2021"

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
rayon = { workspace = true }
memmap2 = { workspace = true }
tracing = { workspace = true }

# Phase 4: Native Arrow/Parquet
arrow = { workspace = true }
parquet = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }