[package]
name = "rhizo_python"
version = "0.1.0"
edition = "2021"
description = "Data, connected. Content-addressable storage with cross-table ACID transactions."

[lib]
name = "_rhizo"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
rhizo_core = { path = "../rhizo_core" }
serde_json = "1.0"

# Phase 4: Native Arrow/Parquet with zero-copy FFI
pyo3-arrow = "0.15"
