[package]
name = "rhizo_python"
version = "0.1.0"
edition = "2021"
description = "Data, connected. Content-addressable storage with cross-table ACID transactions."

[lib]
name = "_rhizo"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
rhizo_core = { path = "../rhizo_core" }
serde_json = "1.0"

# Phase 4: Native Arrow/Parquet with zero-copy FFI
# Use version 0.14 which matches arrow 57, disable chrono-tz to avoid IntoPyObject bug
pyo3-arrow = { version = "0.14", default-features = false }

# Force arrow-array to use same version without chrono-tz
[dependencies.arrow-array]
version = "57"
default-features = false
