[package]
name = "rhizo_python"
version = "0.5.3"
edition = "2021"
description = "Data, connected. Content-addressable storage with cross-table ACID transactions."

[lib]
name = "_rhizo"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
rhizo_core = { path = "../rhizo_core" }
serde_json = "1.0"

# Phase 4: Native Arrow/Parquet with zero-copy FFI
# Use arrow-pyarrow for zero-copy Python interop
arrow = "57"
arrow-pyarrow = "57"
