[package]
name = "udr_core"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }