[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "armillaria"
version = "0.1.0"
description = "The largest organism on Earth, now for your data - content-addressable storage with cross-table ACID transactions"
readme = "../README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["data", "storage", "versioning", "transactions", "parquet", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/aquadantheman/armillaria"
Repository = "https://github.com/aquadantheman/armillaria"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "armillaria"
